manifests/installation/bare/onex/onex-pump/ingressroute.yaml
# Copyright 2022 Lingfei Kong <colin404@foxmail.com>. All rights reserved.
# Use of this source code is governed by a MIT style
# license that can be found in the LICENSE file. The original repo for
# this file is https://github.com/rosas/onex.
#

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: onex-pump-http
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`onex.pump.superproj.com`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: onex-pump
          port: 55080
